customer-details-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: customer-details-service
  name: customer-details-service
  namespace: default
spec:
  replicas: 1
  minReadySeconds: 45
  selector:
    matchLabels:
      app: customer-details-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: customer-details-service
    spec:
      containers:
      - image: exxperiment899/customer-details-service:0.0.1-SNAPSHOT
        imagePullPolicy: IfNotPresent
        name: customer-details-service
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels: #PODS
    app: customer-details-service
  name: customer-details-service
  namespace: default
spec:
#  type: LoadBalancer
  ports:
    - port: 8082
      protocol: TCP
      targetPort: 8082
  selector:
    app: customer-details-service
  sessionAffinity: None
