mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: mysql
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: ordertaking
        - name: MYSQL_PASSWORD
          value: ordertaking_password
        - name: MYSQL_ROOT_PASSWORD
          value: password
        - name: MYSQL_USER
          value: ordertaking_user
        image: mysql:5.7
        args:
          - "--ignore-db-dir=lost+found" # this is must
        imagePullPolicy: ""
        name: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-database-data-volume
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: mysql-database-data-volume
        persistentVolumeClaim:
         claimName: mysql-database-data-volume
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  type: ClusterIP
  ports:
  - name: "3306"
    port: 3306
    targetPort: 3306
  selector:
    io.kompose.service: mysql
