product-catalogue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: product-catalogue-service
  name: product-catalogue-service
  namespace: default
spec:
  replicas: 1
  minReadySeconds: 45
  selector:
    matchLabels:
      app: product-catalogue-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: product-catalogue-service
    spec:
      containers:
      - image: exxperiment899/product-catalogue-service:0.0.1-SNAPSHOT
        imagePullPolicy: IfNotPresent
        name: product-catalogue-service
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels: #PODS
    app: product-catalogue-service
  name: product-catalogue-service
  namespace: default
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: product-catalogue-service
  sessionAffinity: None
